--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -22,19 +22,17 @@
     
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
 
-    Se asume como \textbf{problema de investigación: }la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\
+    Se asume como \textbf{problema de investigación:} la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\
     
-    \textbf{Campo de acción: }Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas en los museos. El \textbf{objetivo}...
+    \textbf{Campo de acción:} Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas en los museos. El \textbf{objetivo}...
 
-    \textbf{Hipótesis: }Si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la vigencia de estos objetos y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
+    \textbf{Hipótesis:} Si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la vigencia de estos objetos y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
 
     \textbf{Tareas de la investigación:}
     \begin{enumerate} %Para crear la lista
         \item Analizar la trascendencia del Internet de las Cosas en los museos tanto internacionales como en los museos de Cuba.
         \item Analizar las arquitecturas del Internet de las Cosas y la proposición de la arquitectura del proyecto.
         \item Caracterizar los diferentes sensores a emplear acorde a las variables presentes.
-        \item Proponer un sistema de comunicación.
-        \item Proponer un sistema de seguridad.
         \item Implementación de un sistema de supervisión y monitoreo basado en IoT.
     \end{enumerate}
 
@@ -43,9 +41,9 @@
     \textbf{Organización del documento: }El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
     En el Capítulo I se hace un análisis de la trascendencia del IoT en los museos internacionales y en los museos de nuestro País.
-    Se hace además un análisis de las arquitecturas propuestas por otros autores y se propone una para el desarrollo del proyecto.
-    Se hace una caracterización de los sistemas de comunicación inalámbricos y de los sistemas de seguridad.
+    Se realiza, además, un análisis de las arquitecturas propuestas por otros autores y se propone una para el desarrollo del proyecto, haciendo una caracterización de la misma, desglosándolas por partes.
+    También se trata lo relacionado a los sistemas de control de población.
 
-    En el Capítulo II ...    
+    En el Capítulo II como parte de la implementación del proyecto se hacen análisis de los esquemáticos correspondientes al montaje de los nodos...
 
     
