21 de julio 6 am

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -108,7 +108,7 @@
     \end{itemize}
 
     \vspace{1cm}
-    Desde el punto de vista de ...\\\\
+    Desde el punto de vista de ....\\\\
 
     \subsection{Propuesta de la Arquitectura IoT del Sistema}
 
