11 de agosto 1:40pm

--- a/ref.bib
+++ b/ref.bib
@@ -365,3 +365,18 @@ Internet of things CISCO
   year={2014},
   author={Rodr{\'\i}guez, Soledad and Vivas, Julio and Vega, Abel and Ba{\~n}o, Vanesa}
 }
+
+@article{tcp/ip,
+  author          = {FERNÁNDEZ BARCELL, Manuel},
+  title           = {Protocolo TCP/IP},
+  year            = {2014}
+}
+
+@article{mqtt,
+  author          = {Quincozes S., Emilio T., & Kazienko J.},
+  journal         = {IEEE Latin America Transactions},
+  number          = {09},
+  volume          = {17},
+  title           = {MQTT protocol: fundamentals, tools and future directions},
+  year            = {2019}
+}
