--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -161,51 +161,14 @@
     \textbf{Nodos}\\
     Los nodos que, de manera general, recopilarán los datos de cada sala, estarán compuestos por los sensores que permitan medir los valores de temperatura, humedad, polución, CO2, vibraciones y luminosidad mientras que, en el caso de los nodos dentro de las vitrinas, se tiene en cuenta las condiciones del microclima y el material de los objetos.\\
 
-    \textbf{Microcontrolador}
-
-    Un microcontrolador (abreviado: MCU) es un circuito integrado programable, capaz de ejecutar las órdenes grabadas en su memoria. Está compuesto de varios bloques funcionales, los cuales cumplen una tarea específica. Un microcontrolador incluye en su interior las tres principales unidades funcionales de una computadora: unidad central de procesamiento, memoria y periféricos de entrada/salida.
-
-    Dentro de la familia de los ESP se encuentra el NodeMCU. Este microcontrolador (Imagen \ref{imag:nodemcu}) será el encargado de recibir los datos de los sensores y organizarlos en función de su continua transmisión hacia el concentrador.\\
-
-    \begin{figure}[h]
-        \centering
-        \includegraphics[width=5cm, height=6cm]{imagenes/nodemcu0.jpg}
-        \caption{Esquemático NodeMcu Vendor}
-        \label{imag:nodemcu}
-    \end{figure}
-    
-    
-    NodeMCU es una pequeña placa Wifi compatible con Arduino, lista para usar en cualquier proyecto IoT. Está montada alrededor del microcontrolador ESP8266 y expone todos sus pines en los laterales. Además, ofrece más ventajas como la incorporación de un regulador de tensión integrado, así como un puerto USB de programación. Se puede programar con LUA o mediante el IDE de Arduino.\\
-
-    Dispone de una extensa comunidad y documentación que permitirá conectar el proyecto mediante conexión Wifi.\\\\\\\\
-
-    \textbf{Características}
-    \begin{itemize}
-        \item Procesador: ESP8266 a 80MHz (3.3V) (ESP-12E).
-        \item 4MB de memoria FLASH (32 MBit).
-        \item WiFi 802.11 b/g/n.
-        \item Regulador 3.3V integrado (500mA).
-        \item Conversor USB-Serial CH340G.
-        \item Función Auto-reset.
-        \item 9 pines GPIO con I2C y SPI.
-        \item 1 entrada analógica (1.0V max).
-        \item 4 agujeros de montaje (3mm).
-        \item Entrada alimentación externa VIN (20V max).
-    \end{itemize}
-
-    \textbf{Sensores}\\
-    En el caso de los sensores, la tabla \ref{tab:correlacion_nodos} relaciona el sensor a emplear según la variable a controlar.
-
-    El nivel de salitre, como se muestra en la tabla, es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.
-    
-    ...
+    La siguiente tabla relaciona la variable a medir según la ubicación del nodo.
 
     \begin{table}[h]
         \centering
         \begin{tabular}{|l|c|l|c|}
         \hline
         \rowcolor[HTML]{9698ED} 
-        \multicolumn{1}{|r|}{\cellcolor[HTML]{9698ED}Nodo} & \multicolumn{1}{r|}{\cellcolor[HTML]{9698ED}Cantidad}                       & Meterial objetos                                                                            & \multicolumn{1}{l|}{\cellcolor[HTML]{9698ED}Variable a medir}                                                                    \\ \hline
+        \multicolumn{1}{|r|}{\cellcolor[HTML]{9698ED}Nodo} & \multicolumn{1}{r|}{\cellcolor[HTML]{9698ED}Ubicación}                      & Meterial objetos                                                                            & \multicolumn{1}{l|}{\cellcolor[HTML]{9698ED}Variable a medir}                                                                    \\ \hline
         1                                                  & \begin{tabular}[c]{@{}c@{}}General\\ Sala 1\end{tabular}                    & porcelana, barro, marfil                                                                    & \begin{tabular}[c]{@{}c@{}}temperatura, humedad,\\ polución, luminosidad,\\ CO2, vibraciones, salitre,\\ xilófagos\end{tabular}  \\ \hline
         2                                                  &                                                                             & bronce, barro, arcilla, piedra                                                              &                                                                                                                                  \\ \cline{1-1} \cline{3-3}
         3                                                  &                                                                             & colección numismática                                                                       &                                                                                                                                  \\ \cline{1-1} \cline{3-3}
@@ -226,26 +189,44 @@
         \label{tab:correlacion_nodos}
     \end{table}
 
-    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
-
-    Valores de temperatura idóneos para la aparición de xilófagos...\\
-
-    \textbf{Alimentación}
-
-    La revolución de las baterías de litio viene dando pasos agigantados...\\ 
-
     \textbf{Composición nodos según ubicación}
+
+    Ya que existe más de una ubicación para los nodos (ver tabla \ref{tab:correlacion_nodos}), dígase en vitrinas o ubicados en la habitación, vale mencionar que influye en la composición de dicho nodo.\\
+    
+    Esta composición viene dada 
+    ...
+
+    \vspace{4cm}
 
     \subsection{Capa de transporte}\label{subsec:capa_transporte}
 
-    Esta es la capa responsable del traslado de la data a través de los demás componentes del sistema. Se promueven los datos a través de comunicaciones vía wifi con el empleo de protocolos mqtt. El microcontrolador Nodemcu posee incorporado wifi ... facilitando el trabajo del traspaso de dicha data.\\
+    Esta es la capa responsable del traslado de la data a través de los demás componentes del sistema estableciendo la comunicación necesaria desde la toma de valores ambientales hasta su análisis y muestreo.    
+    Según \cite{internetOfThingsStateOfTheArt}, la capa de transporte es la que se encarga de transportar y transmitir los datos, recopilados de la capa de percepción, hacia la cloud. Se localizan componentes de red (switch, router, Gateway, etc.), medios de comunicación y protocolos. También es responsable de aspectos de seguridad y el control de ataques.
+    
+    Los datos se promueven a través de protocolos MQTT, HTTP y TCP/IP.\\
+    
+    \textbf{Protocolo MQTT}
 
-    \begin{figure}[h]
-        \centering
-        \includegraphics[width=7cm, height=4cm]{imagenes/wifi_nodemcu.jpg}
-        \caption{Wifi del NodeMcu}
-        \label{imag:wifi_nodemcu}
-    \end{figure}
+    MQTT son las siglas MQ Telemetry Transport, aunque en primer lugar fue conocido como Message Queing Telemetry Transport. Es un protocolo de comunicación M2M (machine-to-machine) de tipo message queue. Está basado en la pila TCP/IP como base para la comunicación. En el caso de MQTT cada conexión se mantiene abierta y se “reutiliza” en cada comunicación. Es una diferencia, por ejemplo, a una petición HTTP 1.0 donde cada transmisión se realiza a través de conexión.
+    MQTT fue creado por el Dr. Andy Stanford-Clark de IBM y Arlen Nipper de Arcom (ahora Eurotech) en 1999 como un mecanismo para conectar dispositivos empleados en la industria petrolera.
+    Aunque inicialmente era un formato propietario, en 2010 fue liberado y pasó a ser un estándar en 2014 según la OASIS (Organization for the Advancement of Structured Information Standards). \cite{mqtt}\\
+
+    \textbf{Protocolo HTTP}
+
+    HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el cual nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, como, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.
+
+    \textbf{Protocolo TCP/IP}
+
+    La definición de TCP/IP es la identificación del grupo de protocolos de red que hacen posible la transferencia de datos en redes, entre equipos informáticos e internet. Las siglas TCP/IP hacen referencia a este grupo de protocolos:
+
+    \begin{itemize}
+        \item TCP: Es el Protocolo de Control de Trasmisión que permite establecer una conexión y el intercambio de datos entre dos anfitriones. Este protocolo proporciona un transporte fiable de datos.
+        \item IP o protocolo de internet, utiliza direcciones series de cuatro octetos con formato de punto decimal (como por ejemplo 75.4.160.25). Este protocolo lleva los datos a otras máquinas de la red.
+    \end{itemize}
+
+    El modelo TCP/IP permite un intercambio de datos fiable dentro de una red, definiendo los pasos a seguir desde que se envían los datos (en paquetes) hasta que son recibidos. Para lograrlo utiliza un sistema de capas con jerarquías (se construye una capa a continuación de la anterior) que se comunican únicamente con su capa superior (a la que envía resultados) y su capa inferior (a la que solicita servicios). \cite{tcp/ip}\\
+
+
 
     \vspace{6cm}
 
@@ -253,7 +234,17 @@
 
     %\section{Sistema de comunicación}\label{sec: sistemaComunicación}
 
-    \section{Sistema de control de población}\label{sec: sistemaSeguridad}
+    \section{Obtención de niveles de salitre y causas para la aparición de xilófagos}
+
+    El nivel de salitre, como se muestra en la tabla, es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.
+    
+    ...
+
+    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
+
+    Valores de temperatura idóneos para la aparición de xilófagos...\\
+
+    \section{Sistema de control de población}\label{sec: sistemaPoblacion}
     Sensores PIR\\
 
     \addcontentsline{toc}{section}{Conclusiones}
