--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -2,7 +2,211 @@
 
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
+        ...\\
+
+\section{Microcontrolador [Puede ser que halla que cambiar a ESP 12F]} \label{sec: microcontrolador}
+
+    Un microcontrolador (abreviado: MCU) es un circuito integrado programable, capaz de ejecutar las órdenes grabadas en su memoria. Está compuesto de varios bloques funcionales, los cuales cumplen una tarea específica. Un microcontrolador incluye en su interior las tres principales unidades funcionales de una computadora: unidad central de procesamiento, memoria y periféricos de entrada/salida.\\
+
+    \vspace{7cm}
+
+    El microcontrolador ESP-12F (Figura \ref{imag:esp-12F}), basado en ESP8266, posee dentro de sus características la posibilidad del empleo de la wifi como medio de comunicación.\\
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=7cm, height=7cm]{imagenes/esp-12F.jpeg}
+        \caption{ESP-12F}
+        \label{imag:esp-12F}
+    \end{figure}
+
+    [...]
+
+    \vspace{4cm}
+
+    Dentro de la familia de los ESP se encuentra el NodeMCU. Este microcontrolador (Imagen \ref{imag:nodemcu}) será el encargado de recibir los datos de los sensores y organizarlos en función de su continua transmisión hacia el concentrador.\\
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=5.5cm, height=6cm]{imagenes/nodemcu0.jpg}
+        \caption{NodeMcu Vendor}
+        \label{imag:nodemcu}
+    \end{figure}
+    
+    
+    NodeMCU es una pequeña placa Wifi compatible con Arduino, lista para usar en cualquier proyecto IoT. Está montada alrededor del microcontrolador ESP8266 y expone todos sus pines en los laterales. Además, ofrece más ventajas como la incorporación de un regulador de tensión integrado, así como un puerto USB de programación. Se puede programar con LUA o mediante el IDE de Arduino.\\
+
+    Dispone de una extensa comunidad y documentación que permitirá conectar el proyecto mediante conexión Wifi.\\\\\\\\
+
+    \textbf{Características}
+    \begin{itemize}
+        \item Procesador: ESP8266 a 80MHz (3.3V) (ESP-12E).
+        \item 4MB de memoria FLASH (32 MBit).
+        \item WiFi 802.11 b/g/n.
+        \item Regulador 3.3V integrado (500mA).
+        \item Conversor USB-Serial CH340G.
+        \item Función Auto-reset.
+        \item 9 pines GPIO con I2C y SPI.
+        \item 1 entrada analógica (1.0V max).
+        \item 4 agujeros de montaje (3mm).
+        \item Entrada alimentación externa VIN (20V max).
+    \end{itemize}
+
+\vspace{2cm}
+
+\section{Sensores} \label{sec: sensores}
+
+    La secuencia de sensores pertenecientes al sistema es selecta, puesto que se tomaron los sensores teniendo en cuenta varios factores:
+
+    \begin{itemize}
+        \item Variable a medir
+        \item Rango de operación
+        \item Precisión
+        \item Voltaje de alimentación
+        \item Corriente de alimentación
+        \item Precio
+    \end{itemize}
+
+En la siguiente tabla se relacionan los mismos.
+
+\textbf{Agregar tabla de sensores}
+
+\subsection{Descripción sensores} \label{subsec: descripcion_sensores}
+
+
+\textbf{Sensor DHT22} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+  \begin{figure}[h]
+      \centering
+      \includegraphics[width=5cm, height=5cm]{imagenes/dht22.jpg}
+      \caption{Sensor DHT22}
+      \label{imag:dht22}
+   \end{figure}
+   
+El DHT22 (AM2302) es un sensor digital de temperatura y humedad relativa de buen rendimiento y de bajo costo. Integra un sensor capacitivo de humedad y un termistor para medir el aire circundante, y muestra los datos mediante una señal digital en el pin de datos (no posee salida analógica).\\
+
+\textbf{Especificaciones Técnicas}
+
+Incluir Tabla de Especificaciones.\\
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=10cm, height=8cm]{imagenes/dht22 dimensiones.jpg}
+    \caption{Dimensiones sensor DHT22}
+    \label{imag:dimensiones_dht22}
+\end{figure}
+
+
+\textbf{Sensor MZ-Z19C} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+      \centering
+      \includegraphics[width=6cm, height=4cm]{imagenes/mh-z19c.png}
+      \caption{Sensor MH-Z19C}
+      \label{imag:mh-z19c}
+   \end{figure}
+
+El sensor de gas de dióxido de carbono MH-Z19C es un pequeño sensor inteligente de uso general que utiliza el principio del infrarrojo no disperso (NDIR) para detectar la presencia de CO2 en el aire.\\
+
+\textbf{Especificaciones Técnicas}
+
+Incluir Tabla de Especificaciones\\\\
+
+\textbf{Sensor M0168} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+      \centering
+      \includegraphics[width=6.5cm, height=5cm]{imagenes/sensor-piezoelectrico.jpg}
+      \caption{Sensor piezoeléctrico M0168}
+      \label{imag:M0168}
+   \end{figure}
+
+En este sensor piezoeléctrico cuando el choque de la cerámica con la lámina metálica genera una señal eléctrica, esta señal analógica es la recibida por los pines analógicos de microcontroladores como el Nodemcu.\\
+
+\textbf{Especificaciones Técnicas}
+
+\begin{itemize}
+    \item Voltaje de trabajo: 3.3V o 5V
+    \item Corriente de trabajo: 1mA
+    \item Rango de temperatura de funcionamiento: -10 ~ +70
+    \item Interfaz Tipo: salida analógica
+    \item Tamaño del artículo: 30mm x 23mm
+\end{itemize}
+
+\textbf{Sensor SDS011} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+      \centering
+      \includegraphics[width=5cm, height=5cm]{imagenes/Sensor SDS011.jpg}
+      \caption{Sensor SDS011}
+      \label{imag:SDS011}
+   \end{figure}
+
+Se basa en el principio de dispersión láser: se puede inducir la dispersión de la luz cuando las partículas atraviesan el área de detección. La luz dispersa se transforma en señales eléctricas, después estas señales serán amplificadas y procesadas. El número y el diámetro de las partículas se pueden obtener mediante análisis porque la forma de onda tiene ciertas relaciones con el diámetro de las partículas.\\
+
+\textbf{Especificaciones Técnicas}
+
+Incluir Tabla de Especificaciones\\
+
+\textbf{Sensor LDR} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+      \centering
+      \includegraphics[width=6.5cm, height=5cm]{imagenes/sensor LDR.png}
+      \caption{Sensor LDR}
+      \label{imag:LDR}
+   \end{figure}
+
+Una fotorresistencia es un componente electrónico cuya resistencia disminuye con el aumento de la intensidad de la luz incidente. Puede también ser llamado fotorresistor, fotoconductor, célula fotoeléctrica o resistor dependiente de la luz, cuyas siglas, LDR, se originan de su nombre en inglés light-dependent resistor.\\
+
+\textbf{Especificaciones Técnicas}
+
+Incluir Tabla de Especificaciones\\
+
+\vspace{4cm}
+
+\textbf{Sensor BH1750} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+      \centering
+      \includegraphics[width=6cm, height=5cm]{imagenes/Sensor BH1750.jpg}
+      \caption{Sensor BH1750}
+      \label{imag:BH1750}
+   \end{figure}
+
+Este módulo es un sensor de luz, que a diferencia del LDR es digital y nos entrega valores de medición en Lux (lumen/m2) que es una unidad de medida estándar para el nivel de iluminación (iluminancia). Posee alta precisión.\\
+
+\textbf{Especificaciones Técnicas}
+
+Incluir Tabla de Especificaciones\\
+
+...
+
+\begin{figure}[h]
+        \centering
+        \includegraphics[width=8cm, height=5.4cm]{imagenes/esquematico nodo.jpg}
+        \caption{Esquemático conexiones}
+        \subcaption*{Fuente: Elaboración propia}
+        \label{imag:esquematico_nodo}
+    \end{figure}
+
+\begin{figure}[h]
+        \centering
+        \includegraphics[width=8cm, height=5.4cm]{imagenes/vista superior.jpg}
+        \caption{Vista superior impreso}
+        \subcaption*{Fuente: Elaboración propia}
+        \label{imag:vista_superior_impreso}
+    \end{figure}
+
+\begin{figure}[h]
+        \centering
+        \includegraphics[width=8cm, height=5.4cm]{imagenes/vista 3D.jpg}
+        \caption{Vista 3D impreso}
+        \subcaption*{Fuente: Elaboración propia}
+        \label{imag:vista_3D_impreso}
+    \end{figure}
 
         \addcontentsline{toc}{section}{Conclusiones}
         \textbf{\Large Conclusiones}\newline
+
+        ...
 
