--- a/capitulos/agradecimientos.tex
+++ b/capitulos/agradecimientos.tex
@@ -2,8 +2,11 @@
     \section*{Agradecimientos}
 \end{center}
 
-%\textit{
-%\begin{flushright}
-   
-%\end{flushright}
-%}
+%A Dios, por ser mi pronto auxilio en las tribulaciones.\\
+%A mi tutor Angel Ravelo, por soportar la carga y la responsabilidad de guiarme en la realización de este trabajo, por las correcciones y por su apoyo como amigo.\\
+%A mi novia Lianis por haber estado a mi lado apoyándome, siendo mi mano derecha.\\
+%A mi familia, en especial a mis padres, Rubiel y Dámaris y a mi hermanita Susana por el apoyo en sus oraciones.\\
+%A mis amigos, Sergio, Ana, que me apoyaron incondicionalmente durante todo el proceso.\\
+%A mis compañeros de cuarto, Jandro, Enmanuel, José, Jesú por los aportes al avance.\\
+%A mis profesores en general por el conocimiento que me fueron impartiendo desde primer año.\\
+%A todas las personas que de una manera u otra estuvieron aportando su granito de arena.\\
